--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "fs": "0.0.1-security",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
