--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
+    "querystringify": "^2.1.1",
     "realm": "^2.27.0-rc.3",
     "session-file-store": "^1.2.0"
   },
